# SuperGreenOS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SuperGreenOS  build.env.example  config.controller.json  config.controller.yml  config.driver.json  config.driver.yml  config.pickle.json  config.pickle.yml  config.screen.json  config.solo.json  config.solo.yml  config.tips.json  config.yml  gdbinit  partitions.csv  sdkconfig  sdkconfig.defaults  shoot_firmwares.sh  switch_conf.sh  template_gitignore.sh  templates.sh  update_config.json.sh  update_config.sh  update_firmware.sh  update_htmlapp.sh  update_template.sh  update_templates.sh  upload_htmlapp.sh  write_spiffs.sh
config_gen/config/: ble.cue  box.cue  (+15 more)
html_app/: app.html  body.html.mustache  boxes.html.mustache  boxes.js.mustache  config.json  controller.html.mustache  controller.js.mustache  header.html.mustache  index.html  leds.html.mustache  leds.js.mustache  menu.css  menu.js  onload.js  onload.js.mustache  param.css  script.js.mustache  style.css  style.css.mustache  tabs.html.mustache  utils.js  utils.js.mustache
html_app_compile/: config.json  index.html
main/: Kconfig.projbuild  Kconfig.projbuild.template  app_main.c  ble_api.c  ble_db.c  ble_db.h  ble_init.c  ble_private.h  component.cmake.template  component.mk  component.mk.template  core_handler.c  init.c  init.c.template  kv.c  kv.h  kv_ble.h  led.h  led_db.c  led_db.h  log.h  time.c  time.h
spiffs_fs/: app.html  config.json  config.yml  index.html
spiffs_fs_gz/: app.html  config.json  tester.html
templates/: new_module.yml
(+422 files in other folders)
